--- a/src/styles/document.css
+++ b/src/styles/document.css
@@ -1,22 +1,22 @@
 #document-container {
-    padding: 3rem 2rem;
+  padding: 3rem 2rem;
 }
 
 .document-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: #FFF;
-    padding: 3% 5%;
-    border-radius: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #FFF;
+  padding: 3% 5%;
+  border-radius: 25px;
 }
 
 .header h1 {
-    font-size: 2.5rem;
-    color: #000000;
+  font-size: 2.5rem;
+  color: #023e8a;
 }
 
 .content {
-    text-align: justify;
+  text-align: justify;
 }
