--- a/src/styles/result.css
+++ b/src/styles/result.css
@@ -4,10 +4,10 @@
   border-radius: 30px;
   -webkit-box-shadow: 5px 5px 14px 1px rgba(0,0,0,0.3); 
   box-shadow: 5px 5px 14px 1px rgba(0,0,0,0.3);
+  padding: 1rem 2rem;
 }
 
 .content {
-  width: 100%;
   padding: 1rem 1.5rem;
 }
 
